# OpenGL_Game

./: .gitignore  CMakeLists.txt  cmake_log.txt  log.txt  log_ascii.txt
OpenGL/: CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  glad.c
OpenGL/OpenGL/Debug/: vc143.idb
OpenGL/OpenGL/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate
OpenGL/OpenGL/x64/Debug/: OpenGL.exe.recipe  application.obj.enc  vc145.idb
OpenGL/OpenGL/x64/Debug/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OpenGL/include/: Camera.h  GameData.h  shader_s.h
OpenGL/include/core/: Application.hh  Window.hh
OpenGL/include/game/: Camera.h  LocalPlayer.hh
OpenGL/include/graphics/: Model.h
OpenGL/include/network/: NetworkClient.hh  Protocol.h
OpenGL/src/: main.cpp
OpenGL/src/core/: Application.cpp  Window.cpp
OpenGL/src/game/: LocalPlayer.cpp
OpenGL/src/graphics/: Model.cpp
OpenGL/src/network/: NetworkClient.cpp  client.c  server.c
src/: main.cpp
src/core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
